[project]
name = "curl-cffi-fetcher"
version = "0.1.0"
description = "summaly の TLS layer bot block 救援用 CLI fetcher (phase12.5、curl-impersonate ベース)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # curl_cffi: libcurl-impersonate を使って Chrome / Firefox / Safari の TLS フィンガープリントを完全再現
    "curl-cffi>=0.7,<1.0",
]

[project.scripts]
fetch = "curl_cffi_fetcher.fetch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curl_cffi_fetcher"]
